<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.acivity.CartActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_cart_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>


    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_below="@id/activity_cart_tool_bar"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/activity_cart_rv_cart_items"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button"
                android:layout_alignParentStart="true"
                android:text="@string/confirm_order"
                android:textColor="#fff"
                android:id="@+id/activity_cart_btn_confirm"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_border"
                android:layout_alignParentEnd="true"
                android:text="@string/add_more"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/activity_cart_btn_add"/>
        </RelativeLayout>

    </LinearLayout>




</RelativeLayout>