<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.acivity.auth.LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_login_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:textSize="@dimen/_16sdp"
            android:textColor="@android:color/white"/>




    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/activity_login_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/activity_login_img_logo"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/woowsouqlogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"/>


            <EditText
                android:gravity="start"
                android:layout_below="@+id/activity_login_img_logo"
                android:id="@+id/activity_login_tv_email"
                android:layout_width="@dimen/_293sdp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/cairo"
                android:textColorHint="@color/textColor"
                android:layout_marginEnd="@dimen/_41sdp"
                android:layout_marginStart="@dimen/_41sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:inputType="textEmailAddress" />




            <EditText
                android:gravity="start"
                android:id="@+id/activity_login_tv_password"
                android:layout_width="@dimen/_293sdp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/cairo"
                android:textColorHint="@color/textColor"
                android:layout_marginEnd="@dimen/_41sdp"
                android:layout_marginStart="@dimen/_41sdp"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_10sdp"
                app:passwordToggleEnabled="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/activity_login_tv_email"/>



            <Button
                android:layout_below="@+id/activity_login_tv_password"
                android:id="@+id/activity_login_btn_login"
                android:layout_width="@dimen/_293sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:textAllCaps="false"
                android:layout_marginEnd="@dimen/_41sdp"
                android:layout_marginStart="@dimen/_41sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape_button"/>


            <RelativeLayout
                android:gravity="center"
                android:id="@+id/activity_login_relative_layout"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/activity_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_23sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_55sdp"
                android:layout_marginEnd="@dimen/_55sdp">



                <TextView
                    android:id="@+id/activity_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:fontFamily="@font/cairo"
                    android:textColor="@color/textColor"
                    android:gravity="center" />



                <TextView
                    android:id="@+id/activity_login_tv_create_a_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_a_new_account"
                    android:fontFamily="@font/cairo"
                    android:textColor="@color/textColor"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_toEndOf="@+id/activity_login_text"/>


            </RelativeLayout>



            <RelativeLayout
                android:layout_below="@+id/activity_login_relative_layout"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_65sdp"
                android:layout_marginStart="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_centerHorizontal="true">


                <com.facebook.login.widget.LoginButton

                    android:id="@+id/activity_login_btn_login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    />
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_below="@id/activity_login_btn_login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />





            </RelativeLayout>





        </RelativeLayout>

    </ScrollView>

</RelativeLayout>