<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.acivity.slied_bar.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_profile_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:textColor="@android:color/white"/>


    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:id="@+id/activity_profile_card_profile"

        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/activity_profile_tool_bar"
        app:cardElevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                    android:layout_centerHorizontal="true"
                android:src="@drawable/woowsouqlogo"
                android:id="@+id/activity_profile_iv_profile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/activity_profile_iv_profile"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="محمد احمد احمد"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/extra_light"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:text="01018335095"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/extra_light"
                    android:textColor="@color/textColor"
                   />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:text="المحفظة بها 120 دينار"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/extra_light"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/activity_profile_card_profile"
        android:id="@+id/activity_profile_card2_profile"
        app:cardElevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"

                  app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                  android:hint="@string/address"
                  app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                  app:boxStrokeWidth="0.5dp"
                  app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                  android:id="@+id/activity_profile_text_layout_address"
                  app:hintTextColor="@color/textColor"
                  android:textColorHint="@color/textColor"

                  android:layout_height="@dimen/_50sdp">
                  <com.google.android.material.textfield.TextInputEditText
                      android:layout_width="match_parent"
                      android:textColor="#000"
                      android:text="الشرقية"
                      android:fontFamily="@font/cairo"
                      android:textColorHint="@color/textColor"
                      android:textSize="@dimen/_10sdp"
                      android:textStyle="bold"                      android:id="@+id/activity_profile_ed_address"
                      android:layout_height="match_parent"/>
              </com.google.android.material.textfield.TextInputLayout>
              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:textColorHint="@color/textColor"

                  app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"

                  android:hint="@string/phone"
                  app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                  app:boxStrokeWidth="0.5dp"
                  app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                  android:id="@+id/activity_profile_text_layout_phone"
                  app:hintTextColor="@color/textColor"

                  android:layout_height="@dimen/_50sdp">
                  <com.google.android.material.textfield.TextInputEditText
                      android:layout_width="match_parent"
                      android:textColor="#000"
                      android:text="01018335095"
                      android:textSize="@dimen/_10sdp"
                      android:fontFamily="@font/cairo"

                      android:textStyle="bold"                      android:id="@+id/activity_profile_ed_phone"
                      android:layout_height="match_parent"/>
              </com.google.android.material.textfield.TextInputLayout>
              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:textColorHint="@color/textColor"

                  app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"

                  android:hint="@string/email"
                  app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                  app:boxStrokeWidth="0.5dp"
                  app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                  android:id="@+id/activity_profile_text_layout_email"
                  app:hintTextColor="@color/textColor"

                  android:layout_height="@dimen/_50sdp">
                  <com.google.android.material.textfield.TextInputEditText
                      android:layout_width="match_parent"
                      android:textColor="#000"
                      android:text="mohamed@med.org"
                      android:textSize="@dimen/_10sdp"
                      android:textColorHint="@color/textColor"
                      android:fontFamily="@font/cairo"

                      android:textStyle="bold"
                      android:id="@+id/activity_profile_ed_email"
                      android:layout_height="match_parent"/>
              </com.google.android.material.textfield.TextInputLayout>
              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:hint="@string/wallet"
                  app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"

                  app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                  app:boxStrokeWidth="0.5dp"
                  app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                  android:textColorHint="@color/textColor"

                  app:boxCornerRadiusTopStart="@dimen/_5sdp"
                  app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                  android:id="@+id/activity_profile_text_layout_wallet"
                  app:hintTextColor="@color/textColor"

                  android:layout_height="@dimen/_50sdp">
                  <com.google.android.material.textfield.TextInputEditText
                      android:layout_width="match_parent"
                      android:textColor="#000"
                      android:fontFamily="@font/cairo"

                      android:textColorHint="@color/textColor"
                      android:text="120"
                      android:textSize="@dimen/_10sdp"
                      android:textStyle="bold"                      android:id="@+id/activity_profile_ed_wallet"
                      android:layout_height="match_parent"/>
              </com.google.android.material.textfield.TextInputLayout>


          </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:fontFamily="@font/cairo"
        android:textStyle="bold"

        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/activity_profile_card2_profile"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/shape_button"
        android:text="@string/edit_profile"
        android:textColor="#ffffff"/>
        </RelativeLayout>
    </ScrollView>





</RelativeLayout>